Proyecto Final de aplicada 1, modificacion del Query, e implementacion de los metodos de la clase Cargos.

--- a/Shurth.csproj
+++ b/Shurth.csproj
@@ -156,7 +156,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DAL\Shurth.sql" />
+    <Content Include="DAL\QueryOfShurth.sql" />
     <Content Include="Release\clientes.png" />
     <Content Include="Release\compras.png" />
     <Content Include="Release\empleados.png" />
