--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="Shurth.Properties.Settings.Setting" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Shurth;Integrated Security=True"
+    <add name="ShurthDb.Properties.Settings.Setting" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ShurthDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   
